syntax = "proto3";
package networkAPI;
option go_package = "github.com/h-varmazyar/Gate/services/network/api/proto";
import "api/proto/src/misc.proto";

service RequestService {
  rpc Do(Request) returns (Response);
  rpc DoAsync(DoAsyncReq) returns (api.Void);
}

message KV {
  // @inject_tag: json:"key"
  string key = 1;
  // @inject_tag: json:"value"
  oneof Value{
    // @inject_tag: json:"string"
    string String = 2;
    // @inject_tag: json:"float64"
    double Float64 = 3;
    // @inject_tag: json:"float32"
    float Float32 = 4;
    // @inject_tag: json:"integer"
    int64 Integer = 5;
    // @inject_tag: json:"bool"
    bool Bool = 6;
  }
}

message Request {
  enum method {
    Unknown = 0;
    POST = 1;
    GET = 2;
    DELETE = 3;
  }
  // @inject_tag: json:"method"
  method Method = 1;
  // @inject_tag: json:"endpoint"
  string Endpoint = 2;
  // @inject_tag: json:"params"
  repeated KV Params = 3;
  // @inject_tag: json:"headers"
  repeated KV Headers = 4;
  // @inject_tag: json:"metadata"
  string Metadata = 5;
  // @inject_tag: json:"timeout"
  int64 Timeout = 9;
  // @inject_tag: json:"issue_time"
  int64 IssueTime = 10;
  // @inject_tag: json:"reference_id"
  string ReferenceID = 11;
  // @inject_tag: json:"rate_limiter_id"
  string RateLimiterID = 12;
}

message DoAsyncReq {
  // @inject_tag: json:"requests"
  repeated Request Requests = 1;
  // @inject_tag: json:"callback_queue"
  string CallbackQueue = 2;
  // @inject_tag: json:"reference_id"
  string ReferenceID = 4;
}

message Response {
  // @inject_tag: json:"code"
  int32 Code = 1;
  // @inject_tag: json:"body"
  string Body = 2;
  // @inject_tag: json:"metadata"
  string Metadata = 3;
  // @inject_tag: json:"method"
  Request.method Method = 4;
  // @inject_tag: json:"reference_id"
  string ReferenceID = 5;
}

message AsyncResponses {
  // @inject_tag: json:"responses"
  repeated Response Responses = 1;
  // @inject_tag: json:"reference_id"
  string ReferenceID = 2;
}